<resources>
    <string name="app_name">Love Calculator_beta</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="love_calculator">Love Calculator</string>
    <string name="first_name">First Name</string>
    <string name="second_name">Second Name</string>
    <string name="calculate">Calculate</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="me">Me</string>
    <string name="you">You</string>

    <!-- geometry of heart-->
    <string name="heart_empty_path">
        M32.95, 19 C31.036, 19 29.199, 19.8828338 28,
        21.2724796 C26.801, 19.8828338 24.964,
        19 23.05, 19 C19.6565, 19 17, 21.6321526 17,
        24.9945504 C17, 29.1089918 20.74, 32.4713896
        26.405, 37.5667575 L28, 39 L29.595, 37.5667575 C35.26,
        32.4713896 39, 29.1089918 39, 24.9945504 C39,
        21.6321526 36.3435, 19 32.95, 19 L32.95,
        19 Z M28.1155, 35.9536785 L28, 36.0572207 L27.8845,
        35.9536785 C22.654, 31.2506812 19.2,
        28.1444142 19.2, 24.9945504 C19.2, 22.8201635 20.8555,
        21.1798365 23.05, 21.1798365 C24.744,
        21.1798365 26.394, 22.2643052 26.9715, 23.7520436
        L29.023, 23.7520436 C29.606, 22.2643052 31.256,
        21.1798365 32.95, 21.1798365 C35.1445,
        21.1798365 36.8, 22.8201635 36.8,
        24.9945504 C36.8, 28.1444142 33.346,
        31.2506812 28.1155, 35.9536785 L28.1155,
        35.9536785 Z
    </string>

    <string name="heart_full_path">
        M28, 39 L26.405, 37.5667575 C20.74,
        32.4713896 17, 29.1089918 17,
        24.9945504 C17, 21.6321526 19.6565,
        19 23.05, 19 C24.964, 19 26.801, 19.8828338 28,
        21.2724796 C29.199, 19.8828338 31.036, 19 32.95,
        19 C36.3435, 19 39, 21.6321526 39, 24.9945504 C39,
        29.1089918 35.26, 32.4713896 29.595,
        37.5667575 L28, 39 L28, 39 Z
    </string>

    <string name="heart_clip_hidden">
        M18 37 L38 37 L38 37 L18 37 Z
    </string>

    <string name="heart_clip_shown">
        M0 0 L56 0 L56 56 L0 56 Z
    </string>
    <string name="your_score">Your Score</string>
    <string name="_100">100%</string>
    <string name="try_again">Back</string>
    <string name="result">result</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="i_am_edit_text_in_dialog">I am Edit Text in Dialog</string>
    <string name="get_started">Get started</string>
</resources>