<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.calculator.CalculatorFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="6dp"
        android:layout_marginVertical="10dp"
        app:cardCornerRadius="12dp"
        app:cardUseCompatPadding="true"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="6dp"
        tools:layout_editor_absoluteY="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="260dp"
                android:layout_marginBottom="22dp"
                android:scaleType="centerCrop"
                android:src="@drawable/builders_of_heart" />

            <TextView
                style="@style/HeaderStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/love_calculator"
                android:textSize="32sp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputEditTextStyle"
                android:layout_marginTop="18dp"
                android:hint="@string/first_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_first_name"
                    android:lines="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputEditTextStyle"
                android:layout_marginTop="5dp"
                android:hint="@string/second_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_second_name"
                    android:lines="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_calculate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="18dp"
                android:letterSpacing="0"
                android:paddingHorizontal="50dp"
                android:text="@string/calculate"
                android:textAllCaps="false"
                android:textColor="#201E1E"
                android:textSize="22sp"
                app:cornerRadius="14dp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/btn_navigate_home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="4dp"
                    android:drawableTop="@drawable/heart"
                    android:drawableTint="@color/purple_700"
                    android:padding="4dp"
                    android:text="@string/home"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/btn_navigate_history"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="4dp"
                    android:drawableTop="@drawable/timeline"
                    android:drawableTint="@color/purple_200"
                    android:padding="4dp"
                    android:text="@string/history"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>