<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="2dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="6dp"
        android:background="@drawable/bg_inner_item_history"
        >
        <TextView
            android:id="@+id/tv_first_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="@string/you"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_heart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp"
            android:src="@drawable/heart"
            app:layout_constraintTop_toTopOf="@id/tv_first_name"
            app:layout_constraintBottom_toBottomOf="@id/tv_second_name"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_second_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="@string/me"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/equal"
            android:layout_marginStart="100dp"
            android:src="@drawable/equal"
            app:layout_constraintBottom_toBottomOf="@id/img_heart"
            app:layout_constraintStart_toEndOf="@id/img_heart"
            app:layout_constraintTop_toTopOf="@id/img_heart"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:id="@+id/sm_heart"
            android:scaleType="centerCrop"
            android:src="@drawable/smaller_empty_heart"
            android:layout_marginStart="70dp"
            app:layout_constraintTop_toTopOf="@id/equal"
            app:layout_constraintBottom_toBottomOf="@id/equal"
            app:layout_constraintStart_toEndOf="@id/equal"/>
        <TextView
            android:id="@+id/tv_percentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/sm_heart"
            app:layout_constraintStart_toStartOf="@id/sm_heart"
            app:layout_constraintBottom_toBottomOf="@id/sm_heart"
            app:layout_constraintEnd_toEndOf="@id/sm_heart"
            android:text="@string/_100"
            android:textColor="@color/black"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>